<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="0dp"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainlogo" />

    <EditText
        android:id="@+id/username_edittext_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/custom_edittext"
        android:hint="@string/username_text_hint_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <EditText
        android:id="@+id/pass_edittext_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/pass_text_hint_login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_login" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/login_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="loginActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_edittext_login" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or_text_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_button_login"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="signupActivity"
        app:layout_constraintTop_toBottomOf="@+id/or_text" />
</androidx.constraintlayout.widget.ConstraintLayout>