<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainlogo" />

    <EditText
        android:id="@+id/signup_usernametext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/custom_edittext"
        android:hint="@string/username_text_hint_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/signup_passwordtext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/pass_text_hint_signup"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_usernametext" />

    <EditText
        android:id="@+id/signup_reenter_passwordtext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/reenter_text_hint_signup"
        android:background="@drawable/custom_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_passwordtext" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_button_signup"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_reenter_passwordtext" />
</androidx.constraintlayout.widget.ConstraintLayout>